--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fontsource/merriweather": "^5.0.8",
     "@tailwindcss/postcss": "^4.1.12",
     "gatsby": "^5.14.6",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-feed": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.15.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-typescript": "^5.15.0",
     "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-remark-responsive-iframe": "^6.14.0",
@@ -30,7 +32,11 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "prettier": "^2.8.8",
+    "typescript": "^5.9.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
