--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "gatsby": "^5.14.6",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-feed": "^5.14.0",
@@ -29,6 +30,7 @@
     "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "postcss": "^8.5.6",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
