--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "gh-pages": "^6.3.0",
     "prettier": "^2.8.8",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
@@ -67,6 +68,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build && gh-pages -d public"
   }
 }
