--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-postcss": "^6.15.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-typescript": "^5.15.0",
+    "gatsby-remark-autolink-headers": "^6.15.0",
     "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-remark-responsive-iframe": "^6.14.0",
