--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^5.14.6",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-feed": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.15.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.15.0",
