--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fontsource/merriweather": "^5.0.8",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
@@ -29,6 +32,8 @@
     "gatsby-plugin-postcss": "^6.15.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-typescript": "^5.15.0",
+    "gatsby-remark-autolink-headers": "^6.15.0",
+    "gatsby-remark-copy-relative-linked-files": "^2.0.0",
     "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-remark-responsive-iframe": "^6.14.0",
