--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-postcss": "^6.15.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.15.0",
     "gatsby-plugin-typescript": "^5.15.0",
     "gatsby-remark-autolink-headers": "^6.15.0",
     "gatsby-remark-copy-relative-linked-files": "^2.0.0",
